# transformer

./: .buildinfo  .buildinfo.bak  README.md  api.html  contributing.html  examples.html  genindex.html  guide.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: docs.yml  publish.yml
_modules/: index.html
_modules/transformer/: attns.html  config.html  ffn.html  pos.html  transformer.html
_sources/: guide.md.txt  index.md.txt  quickstart.md.txt
docs/: requirements-docs.txt
docs/source/: .guide.md.swp  conf.py  contributing.md  examples.md  index.md
transformer/: __init__.py  attns.py  config.py  ffn.py  pos.py  transformer.py  utils.py
transformer.egg-info/: PKG-INFO  SOURCES.txt
